--- a/APP/src/styles.scss
+++ b/APP/src/styles.scss
@@ -12,6 +12,12 @@
 }
 
 .scroll {
-  max-height: 35vh;
+  max-height: 25vh;
   overflow-y: auto;
 }
+
+.CodeMirror {
+  width: 100%;
+  height: 100%;
+}
+
